chaosvpn (2.19~dev-0) unstable; urgency=low

  * Development version

  * $use_dynamic_routes: Support compressed IPv6 addresses in
    subnet-up/down shellscript, as used by latest tinc 1.1-git.

 -- Sven-Haegar Koch <haegar@sdinet.de>  Fri, 08 Aug 2014 00:23:26 +0200

chaosvpn (2.18-0) unstable; urgency=low

  * Include chaosvpn.conf template for OpenBSD.
  * Do not automatically restart tincd if it aborted cleanly with
    a fatal error.
    Can happen for example with config incompatibilities between tinc
    and chaosvpn, or if two instances of the same node are running on
    two different hosts and the conflict-resolution in tinc decided
    to kill one.
  * calcdebversion: Make the version number in "make deb" look nicer.
  * Created test_addrmask.c, a small test program to verify that the
    addressmask parsing and output functions work on a system.
    Use it as 'make test_addrmask && ./test_addrmask'
  * Makefile: Use BSD gcc parameters for all kinds of BSD, not just FreeBSD
  * addrmask_to_string(): use inet_ntop() on unix, and getnameinfo() only on
    win32 - fixes NetBSD support.
  * Added a couple of internal cleanups.

 -- Sven-Haegar Koch <haegar@sdinet.de>  Thu, 01 Aug 2013 19:42:44 +0200

chaosvpn (2.17-0) unstable; urgency=low

  * addrmask_parse(): Fixed IP address parsing under OpenWRT by setting a
    missing ai_socktype for getaddrinfo() calls.
    Thanks to Thorben Went for debugging this.
  * addrmask.c: Fixed compile error on FreeBSD by including missing
    netinet/in.h
  * Fixed handling of nodes marked as silent=1
  * Added a couple of Apple OSX workarounds.
  * Added "make appleinstall" Makefile target.
  * More FreeBSD fixes.
  * Allow $tincd_bin to be specified as a relative path, searching for
    it in $PATH
  * tinc 1.1pre support: Starting with current git (and 1.1pre7) the binary
    that was called 'tincctl' is now just called 'tinc'. So change the
    default value and introduce new $tincctl_bin config variable.